--- a/app/src/main/res/layout/activity_complain.xml
+++ b/app/src/main/res/layout/activity_complain.xml
@@ -66,6 +66,7 @@
         android:layout_marginStart="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_20"
         android:overScrollMode="never"
+        android:padding="@dimen/dp_10"
         android:scrollbars="none"
         app:max_select="1" />
 
