--- a/app/src/main/res/layout/dialog_question_answersheet.xml
+++ b/app/src/main/res/layout/dialog_question_answersheet.xml
@@ -9,6 +9,35 @@
     app:rv_cornerRadius_TL="@dimen/dp_15"
     app:rv_cornerRadius_TR="@dimen/dp_15"
     tools:ignore="RtlCompat">
+    <!--顶部标题和关闭按钮-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:paddingEnd="@dimen/dp_11">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/question_tab_answersheet"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_13" />
+
+        <ImageButton
+            android:id="@+id/answer_closebtn"
+            android:layout_width="@dimen/dp_25"
+            android:layout_height="@dimen/dp_25"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@android:color/transparent"
+            android:src="@mipmap/icon_closebtn2" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:background="@color/color_F5F5F5" />
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -23,46 +52,17 @@
             android:paddingEnd="@dimen/dp_10"
             android:paddingStart="@dimen/dp_10">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_40"
-                android:paddingEnd="@dimen/dp_11">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="@string/question_tab_answersheet"
-                    android:textColor="@color/color_333333"
-                    android:textSize="@dimen/sp_13" />
-
-                <ImageButton
-                    android:id="@+id/answer_closebtn"
-                    android:layout_width="@dimen/dp_25"
-                    android:layout_height="@dimen/dp_25"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:background="@android:color/transparent"
-                    android:src="@mipmap/icon_closebtn2" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
-                android:background="@color/color_F5F5F5" />
-
             <com.ucfo.youcaiwx.widget.customview.NestedGridView
                 android:id="@+id/listView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/dp_19"
                 android:cacheColorHint="#00000000"
                 android:gravity="center"
                 android:horizontalSpacing="@dimen/dp_10"
                 android:listSelector="#00000000"
                 android:numColumns="5"
+                android:paddingTop="@dimen/dp_19"
                 android:scrollbars="none"
                 android:stretchMode="columnWidth"
                 android:transcriptMode="alwaysScroll"
@@ -80,11 +80,6 @@
                 android:text="@string/question_tab_commit"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/sp_14" />
-
         </LinearLayout>
-
-
     </android.support.v4.widget.NestedScrollView>
-
-
 </com.flyco.roundview.RoundLinearLayout>
