--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -73,7 +73,7 @@
             app:rv_backgroundColor="@color/color_E6E6E6"
             app:rv_isRadiusHalfHeight="true"
             tools:text="12/20" />
-        <!--pdf的加载页数-->
+        <!--退出PDF按钮-->
         <ImageView
             android:id="@+id/player_exitPdf"
             android:layout_width="@dimen/dp_20"
@@ -83,6 +83,17 @@
             android:layout_marginBottom="@dimen/dp_50"
             android:layout_marginStart="@dimen/dp_20"
             android:src="@drawable/icon_pdf_full"
+            android:visibility="gone" />
+
+        <!--锁屏按钮-->
+        <ImageView
+            android:id="@+id/player_lockedScreen"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/dp_20"
+            android:src="@drawable/icon_unlocked"
             android:visibility="gone" />
 
         <!--播放器顶部菜单栏-->
