--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -28,6 +28,13 @@
             android:layout_centerInParent="true"
             android:scaleType="fitXY"
             android:src="@color/colorPrimary" />
+        <!--SB弹幕-->
+        <TextView
+            android:id="@+id/text_danmucontent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:visibility="gone" />
         <!--讲义-->
         <com.github.barteksc.pdfviewer.PDFView
             android:id="@+id/pdfView"
