--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -28,7 +28,7 @@
             android:layout_centerInParent="true"
             android:scaleType="fitXY"
             android:src="@color/colorPrimary" />
-        <!--SB弹幕-->
+        <!--SBZZ弹幕-->
         <TextView
             android:id="@+id/text_danmucontent"
             android:layout_width="wrap_content"
@@ -100,9 +100,10 @@
             android:layout_height="@dimen/dp_30"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/dp_20"
+            android:layout_marginStart="@dimen/dp_15"
             android:clickable="true"
-            android:src="@drawable/icon_unlocked"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_icon_unlocked"
             android:visibility="gone" />
 
         <!--播放器顶部菜单栏-->
