--- a/app/src/main/res/layout/dialog_testmodeicon.xml
+++ b/app/src/main/res/layout/dialog_testmodeicon.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:minHeight="@dimen/dp_45"
         android:minWidth="@dimen/dp_45"
-        android:src="@mipmap/app_icon" />
+        android:src="@mipmap/ic_launcher2" />
 
     <TextView
         android:id="@+id/txt_msg"
