修改了一些细节,尤其是题库的小细节

--- a/app/src/main/res/layout/activity_results_statistical.xml
+++ b/app/src/main/res/layout/activity_results_statistical.xml
@@ -46,6 +46,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/color_151515"
                             android:textSize="@dimen/sp_16"
+                            android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             tools:text="this is a title" />
