--- a/app/src/main/res/layout/fragment_questionbank.xml
+++ b/app/src/main/res/layout/fragment_questionbank.xml
@@ -236,8 +236,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:clickable="true"
-                        android:drawablePadding="@dimen/dp_6"
-                        android:drawableTop="@mipmap/icon_qb_evaluation"
+                        android:drawableTop="@mipmap/icon_qb_evaluation2"
                         android:gravity="center"
                         android:text="@string/question_title_assessment"
                         android:textColor="@color/color_333333"
@@ -249,8 +248,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:clickable="true"
-                        android:drawablePadding="@dimen/dp_6"
-                        android:drawableTop="@mipmap/icon_qb_errorscenter"
+                        android:drawableTop="@mipmap/icon_qb_errorscenter2"
                         android:gravity="center"
                         android:text="@string/question_title_errorscenter"
                         android:textColor="@color/color_333333"
@@ -262,8 +260,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:clickable="true"
-                        android:drawablePadding="@dimen/dp_6"
-                        android:drawableTop="@mipmap/icon_qb_record"
+                        android:drawableTop="@mipmap/icon_qb_record2"
                         android:gravity="center"
                         android:text="@string/question_title_record"
                         android:textColor="@color/color_333333"
