--- a/app/src/main/res/layout/item_questionbankonrecord.xml
+++ b/app/src/main/res/layout/item_questionbankonrecord.xml
@@ -16,6 +16,7 @@
         android:maxLines="1"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_14"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/item_questionrecord_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
