--- a/app/src/main/res/layout/item_stage_knowledge.xml
+++ b/app/src/main/res/layout/item_stage_knowledge.xml
@@ -24,6 +24,7 @@
         android:id="@+id/item_stage_knowledge_Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_2"
         android:textColor="@android:color/transparent"
         android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toStartOf="parent"
