--- a/app/src/main/res/layout/dialog_agreement.xml
+++ b/app/src/main/res/layout/dialog_agreement.xml
@@ -9,14 +9,15 @@
     android:gravity="center"
     android:orientation="vertical"
     app:rv_backgroundColor="@android:color/white"
-    app:rv_cornerRadius="@dimen/dp_8">
+    app:rv_cornerRadius="@dimen/dp_5">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:minHeight="@dimen/dp_70"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingEnd="@dimen/dp_15"
+        android:paddingStart="@dimen/dp_15">
 
 
         <TextView
@@ -26,40 +27,56 @@
             android:gravity="center"
             android:text="@string/WarmPrompt"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_18"
+            android:textSize="@dimen/sp_15"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dp_15"
-            android:layout_marginStart="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_5"
-            android:gravity="center"
             android:text="@string/agreementTitle"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_16" />
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_14" />
 
-        <TextView
-            android:id="@+id/txt_agreement"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="@string/agreementTitle2"
-            android:textColor="@color/color_E84342"
-            android:textSize="@dimen/sp_16" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_agreement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:text="@string/agreementTitle2"
+                android:textColor="@color/color_E84342"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:text="@string/agreementTitle3"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/txt_Privacyagreement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:text="@string/agreementTitle4"
+                android:textColor="@color/color_E84342"
+                android:textSize="@dimen/sp_14" />
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_15"
-            android:layout_marginEnd="@dimen/dp_15"
-            android:layout_marginStart="@dimen/dp_15"
-            android:gravity="center"
-            android:text="@string/agreementTitle3"
+            android:text="@string/agreementTitle5"
             android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_16" />
+            android:textSize="@dimen/sp_14" />
     </LinearLayout>
 
     <View
@@ -69,7 +86,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_43"
+        android:layout_height="@dimen/dp_38"
         android:orientation="horizontal">
 
         <com.flyco.roundview.RoundTextView
@@ -80,9 +97,9 @@
             android:clickable="true"
             android:gravity="center"
             android:stateListAnimator="@drawable/shape_selector_elevation"
-            android:text="@string/cancel"
-            android:textColor="@color/color_666666"
-            android:textSize="16sp"
+            android:text="@string/agreement_cancel"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_15"
             app:rv_backgroundColor="@android:color/white"
             app:rv_backgroundPressColor="@color/color_E6E6E6"
             app:rv_cornerRadius_BL="@dimen/dp_8"
@@ -102,9 +119,9 @@
             android:clickable="true"
             android:gravity="center"
             android:stateListAnimator="@drawable/shape_selector_elevation"
-            android:text="@string/confirm"
+            android:text="@string/agreement_confirm"
             android:textColor="@color/colorPrimary"
-            android:textSize="16sp"
+            android:textSize="@dimen/sp_15"
             app:rv_backgroundColor="@android:color/white"
             app:rv_backgroundPressColor="@color/color_E6E6E6"
             app:rv_cornerRadius_BR="@dimen/dp_8"
