--- a/app/src/main/res/layout/titlebar_mine.xml
+++ b/app/src/main/res/layout/titlebar_mine.xml
@@ -23,10 +23,12 @@
 
     <ImageView
         android:id="@+id/titlebar_setting"
-        android:layout_width="@dimen/dp_17"
-        android:layout_height="@dimen/dp_17"
+        android:layout_width="@dimen/dp_18"
+        android:layout_height="@dimen/dp_18"
         android:layout_marginEnd="@dimen/dp_19"
         android:clickable="true"
+        android:padding="@dimen/dp_2"
+        android:scaleType="center"
         android:src="@mipmap/icon_setting"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
