--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true" />
+
         <!--封面-->
         <ImageView
             android:id="@+id/course_coverimage"
@@ -28,6 +29,7 @@
             android:layout_centerInParent="true"
             android:scaleType="fitXY"
             android:src="@color/colorPrimary" />
+
         <!--SBZZ弹幕-->
         <TextView
             android:id="@+id/text_danmucontent"
@@ -35,6 +37,7 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:visibility="gone" />
+
         <!--讲义-->
         <com.github.barteksc.pdfviewer.PDFView
             android:id="@+id/pdfView"
@@ -80,6 +83,7 @@
             app:rv_backgroundColor="@color/color_E6E6E6"
             app:rv_isRadiusHalfHeight="true"
             tools:text="12/20" />
+
         <!--退出PDF按钮-->
         <ImageView
             android:id="@+id/player_exitPdf"
@@ -100,7 +104,8 @@
             android:layout_height="@dimen/dp_30"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/dp_21"
+            android:layout_marginStart="@dimen/dp_20"
+            android:animateLayoutChanges="true"
             android:clickable="true"
             android:scaleType="fitXY"
             android:src="@drawable/ic_icon_unlocked2"
