--- a/app/src/main/res/layout/dialog_coursedir_window.xml
+++ b/app/src/main/res/layout/dialog_coursedir_window.xml
@@ -76,6 +76,7 @@
             android:divider="@null"
             android:dividerHeight="@dimen/dp_1"
             android:gravity="center"
+            android:groupIndicator="@null"
             android:overScrollMode="never"
             android:scrollbarSize="1dp"
             android:scrollbarStyle="insideInset"
