修复view获取可能为空的情况 修复进入下载中心崩溃问题 修复删除下载视频闪退问题 修复部分列表出现的显示问题

--- a/app/src/main/res/layout/activity_download_directory.xml
+++ b/app/src/main/res/layout/activity_download_directory.xml
@@ -54,7 +54,7 @@
                 android:background="@color/color_E6E6E6" />
 
             <ExpandableListView
-                android:id="@+id/listView"
+                android:id="@+id/expandablelistview"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -63,8 +63,7 @@
                 android:gravity="center"
                 android:groupIndicator="@null"
                 android:listSelector="@android:color/transparent"
-                android:overScrollMode="never"
-                android:scrollbars="none" />
+                android:overScrollMode="never" />
 
             <Button
                 android:id="@+id/btn_exit"
