--- a/app/src/main/res/layout/fragment_chiocequestionitem.xml
+++ b/app/src/main/res/layout/fragment_chiocequestionitem.xml
@@ -230,6 +230,7 @@
                 android:id="@+id/question_analysis_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_2"
                 android:layout_marginTop="@dimen/dp_14"
                 android:lineSpacingExtra="@dimen/dp_5"
                 android:textColor="@color/color_333333"
@@ -240,14 +241,14 @@
                 android:id="@+id/question_analysis_image"
                 android:layout_width="@dimen/dp_217"
                 android:layout_height="@dimen/dp_122"
-                android:layout_marginBottom="@dimen/dp_2"
-                android:layout_marginTop="@dimen/dp_2" />
+                android:layout_marginBottom="@dimen/dp_2" />
 
             <!--TODO 1.0.2开始增加 解析题干2-->
             <TextView
                 android:id="@+id/question_analysis_content2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_2"
                 android:lineSpacingExtra="@dimen/dp_5"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp_12"
@@ -257,8 +258,7 @@
                 android:id="@+id/question_analysis_image2"
                 android:layout_width="@dimen/dp_217"
                 android:layout_height="@dimen/dp_122"
-                android:layout_marginBottom="@dimen/dp_5"
-                android:layout_marginTop="@dimen/dp_2" />
+                android:layout_marginBottom="@dimen/dp_5" />
 
         </LinearLayout>
 
