--- a/app/src/main/res/layout/item_answer_pictureitem.xml
+++ b/app/src/main/res/layout/item_answer_pictureitem.xml
@@ -8,6 +8,7 @@
         android:id="@+id/iv_image"
         android:layout_width="@dimen/dp_86"
         android:layout_height="@dimen/dp_48"
+        android:layout_marginEnd="@dimen/dp_4"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
