--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -150,21 +150,32 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:paddingEnd="@dimen/dp_5"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/sp_15"
                 android:textStyle="bold"
                 tools:ignore="InefficientWeight" />
 
+            <!--收藏按钮-->
+            <ImageView
+                android:id="@+id/player_collect"
+                android:layout_width="@dimen/dp_28"
+                android:layout_height="@dimen/dp_28"
+                android:clickable="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_icon_playunstar"
+                android:visibility="gone" />
+
             <ImageButton
                 android:id="@+id/player_share"
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
-                android:layout_marginStart="@dimen/dp_15"
+                android:layout_marginStart="@dimen/dp_10"
                 android:background="@android:color/transparent"
                 android:src="@mipmap/icon_share"
                 tools:ignore="ContentDescription" />
 
-            <!--横屏时 设置讲义按钮-->
+            <!--横屏时 设置,讲义,倍速按钮-->
             <LinearLayout
                 android:id="@+id/player_toprightlinear"
                 android:layout_width="wrap_content"
@@ -172,14 +183,16 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:visibility="gone">
-                <!--收藏按钮-->
-                <ImageView
-                    android:id="@+id/player_collect"
-                    android:layout_width="@dimen/dp_28"
-                    android:layout_height="@dimen/dp_28"
-                    android:clickable="true"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/ic_icon_playunstar" />
+                <!--
+                                &lt;!&ndash;收藏按钮&ndash;&gt;
+                                <ImageView
+                                    android:id="@+id/player_collect"
+                                    android:layout_width="@dimen/dp_28"
+                                    android:layout_height="@dimen/dp_28"
+                                    android:clickable="true"
+                                    android:scaleType="fitXY"
+                                    android:src="@drawable/ic_icon_playunstar" />
+                -->
                 <!--倍速播放俺妞妞-->
                 <TextView
                     android:id="@+id/player_speed"
