修复部分页面加载图片的奔溃问题 修复视频播放完成后无法点击问题 修复微信登录完善信息问题

--- a/app/src/main/res/layout/fragment_courseanswerquestion.xml
+++ b/app/src/main/res/layout/fragment_courseanswerquestion.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
-
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
         <com.ucfo.youcaiwx.widget.customview.LoadingLayout
             android:id="@+id/loadinglayout"
@@ -29,7 +25,6 @@
                     android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:nestedScrollingEnabled="false"
                     android:overScrollMode="never" />
 
             </android.support.v4.widget.NestedScrollView>
@@ -38,5 +33,4 @@
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
