后续教育活动开发 后续教育课程分类开发

--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -21,7 +21,9 @@
             android:id="@+id/surfaceview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true" />
 
         <!--手势操作-->
         <com.ucfo.youcaiwx.module.course.player.widget.GestureView
