--- a/app/src/main/res/layout/fragment_courseintroduction.xml
+++ b/app/src/main/res/layout/fragment_courseintroduction.xml
@@ -137,7 +137,7 @@
                         android:paddingBottom="@dimen/dp_9"
                         android:paddingStart="@dimen/dp_12"
                         android:paddingTop="@dimen/dp_9"
-                        android:text="讲师介绍"
+                        android:text="@string/course_teacherintroduction"
                         android:textColor="@color/color_333333"
                         android:textSize="@dimen/sp_15"
                         android:textStyle="bold" />
@@ -162,7 +162,7 @@
                         android:paddingBottom="@dimen/dp_9"
                         android:paddingStart="@dimen/dp_12"
                         android:paddingTop="@dimen/dp_9"
-                        android:text="课程介绍"
+                        android:text="@string/course_classintroduction"
                         android:textColor="@color/color_333333"
                         android:textSize="@dimen/sp_15"
                         android:textStyle="bold" />
