--- a/app/src/main/res/layout/activity_watch_the_record.xml
+++ b/app/src/main/res/layout/activity_watch_the_record.xml
@@ -8,37 +8,11 @@
     android:orientation="vertical"
     tools:context="com.ucfo.youcaiwx.module.user.activity.WatchTheRecordActivity">
 
-    <include layout="@layout/titlebar_toolbar" />
+    <include layout="@layout/titlebar_tablayout" />
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/refreshlayout"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srlEnableLoadMore="false"
-        app:srlEnableRefresh="true">
-
-        <com.ucfo.youcaiwx.widget.customview.LoadingLayout
-            android:id="@+id/loadinglayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v4.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:overScrollMode="never">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:reverseLayout="true" />
-
-            </android.support.v4.widget.NestedScrollView>
-
-        </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
-
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
-
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 </LinearLayout>
