--- a/app/src/main/res/layout/fragment_minecourse.xml
+++ b/app/src/main/res/layout/fragment_minecourse.xml
@@ -5,60 +5,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linear_holder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="invisible">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="@dimen/dp_14"
-            android:drawableTop="@mipmap/icon_nodata"
-            android:gravity="center"
-            android:text="@string/mine_Course_nodata"
-            android:textColor="@color/color_999999"
-            android:textSize="@dimen/sp_13" />
-
-        <Button
-            android:id="@+id/btn_lookCourse"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="@dimen/dp_293"
-            android:layout_height="@dimen/dp_34"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/dp_78"
-            android:background="@mipmap/icon_btnroundback"
-            android:gravity="center"
-            android:stateListAnimator="@drawable/shape_selector_elevation"
-            android:text="@string/mine_Course_Look"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/sp_14" />
-
-    </LinearLayout>
-
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srlEnableLoadMore="true"
-        app:srlEnableRefresh="true">
+        android:layout_height="match_parent">
 
-        <android.support.v4.widget.NestedScrollView
+        <com.ucfo.youcaiwx.widget.customview.LoadingLayout
+            android:id="@+id/loadinglayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:overScrollMode="never">
+            android:layout_height="match_parent">
 
-            <com.ucfo.youcaiwx.widget.shimmer.ShimmerRecyclerView
-                android:id="@+id/recyclerview"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:overScrollMode="never" />
-        </android.support.v4.widget.NestedScrollView>
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+                <!--站位的按钮-->
+                <LinearLayout
+                    android:id="@+id/linear_holder"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="invisible">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp_14"
+                        android:drawableTop="@mipmap/icon_nodata"
+                        android:gravity="center"
+                        android:text="@string/mine_Course_nodata"
+                        android:textColor="@color/color_999999"
+                        android:textSize="@dimen/sp_13" />
+
+                    <Button
+                        android:id="@+id/btn_lookCourse"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="@dimen/dp_293"
+                        android:layout_height="@dimen/dp_34"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dp_78"
+                        android:background="@mipmap/icon_btnroundback"
+                        android:gravity="center"
+                        android:stateListAnimator="@drawable/shape_selector_elevation"
+                        android:text="@string/mine_Course_Look"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_14" />
+
+                </LinearLayout>
+                <!--这是个列表-->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"
+                    android:visibility="invisible" />
+            </LinearLayout>
+        </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
